# Door-Detection-in-Corridor

./: CMakeLists.txt  README.md  door_detection.py  package.xml  people_detection.cpp  pointcloud_rgb.cpp
